[package]
name = "rcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
clap = { version = "4.0.32", features = ["derive"] }
ethnum = "1.3.2"
hex = "0.4.3"
openssl = "0.10.45"
serde_json = { version = "1.0.91", features = ["preserve_order"] }
